# ruva

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: test.yaml
event-driven-core/: Cargo.toml
event-driven-core/src/: lib.rs  lib_components.rs  message.rs  messagebus.rs  outbox.rs  repository.rs  responses.rs  unit_of_work.rs
event-driven-macro/: Cargo.toml
event-driven-macro/src/: aggregate.rs  dependency.rs  error.rs  handler.rs  init_command_handler.rs  lib.rs  message.rs  result.rs  utils.rs
event-driven-macro/src/init_command_handler/: parse.rs
macros/: Cargo.toml
macros/lib_macros/: Cargo.toml
macros/lib_traits/: Cargo.toml
macros/lib_traits/src/: lib.rs
macros/src/: lib.rs
ruva-core/: Cargo.toml
ruva-core/src/: aggregate.rs  backtrace.rs  handler.rs  lib.rs  macros.rs  message.rs  messagebus.rs  outbox.rs  repository.rs  responses.rs  snowflake.rs  unit_of_work.rs  utils.rs
ruva-core/src/adapters/: mod.rs
ruva-core/src/adapters/sqlx/: conversion.rs  mod.rs  postgres.rs
ruva-core/src/bus_components/: contexts.rs  executor.rs  handler.rs  messagebus.rs  mod.rs
ruva-core/src/bus_components/handler/: event.rs  mod.rs
ruva-core/src/bus_components/handler/command/: mod.rs  uow.rs
ruva-core/src/rdb/: conversion.rs  executor.rs  mock_db.rs  mod.rs  repository.rs
ruva-es/: Cargo.toml
ruva-es/src/: aggregate.rs  event.rs  event_store.rs  lib.rs  testing.rs
ruva-es/src/rdb/: mod.rs  repository.rs  test.rs
ruva-es/src/rdb/migrations/: cqrs.down.sql  cqrs.up.sql
ruva-macro/: Cargo.toml
ruva-macro/src/: aggregate.rs  command.rs  construct.rs  domain.rs  generic_helpers.rs  handler.rs  init_command_handler.rs  injectable.rs  lib.rs  message.rs  message_handler.rs  repository.rs  result.rs  utils.rs
ruva-macro/src/helpers/: derive_helpers.rs  generic_helpers.rs  mod.rs
ruva-macro/src/init_command_handler/: parse.rs
src/: domain.rs  lib.rs  messagebus.rs  outbox.rs  repository.rs  responses.rs
tests/: aggregate.rs  application_error.rs  commands.rs  external_event.rs  handlers.rs  internal_event.rs
