[package]
name = "ruva"
version = "0.3.17"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven Message Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ruva-core= {version="0.3.17", path="./ruva-core"}
ruva-macro= {version="0.3.17", path="./ruva-macro"}
ruva-es = {version="0.3.17",path="./ruva-es"}
static_assertions="1.1.0"

[features]
sqlx-postgres = ["ruva-core/sqlx-postgres"]
