[package]
name = "ruva"
version = "0.18.3"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven Message Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ruva-core= {version="0.18.3", path="./ruva-core"}
ruva-macro= {version="0.18.3", path="./ruva-macro"}
static_assertions="1.1.0"
regex = "1.10.6"

[dev-dependencies]
serde = {version="1.0.179",features=["derive"]}

[features]
backtrace = ["ruva-core/backtrace"]
tracing = ["ruva-core/tracing"]
sqlx-postgres = ["ruva-core/sqlx-postgres"]


