[package]
name = "event-driven-macro"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Rust Library For Event Driven Message Handling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
event-driven-core = {version="0.1.1", path="../event-driven-core"}
syn = {version="2", fetures=["extra-traits","derive","full"]}
quote = "1"
proc-macro2="1"