[package]
name = "event-driven-macro"
version = "0.1.10"
edition = "2021"
license-file = "LICENSE"
description = "Rust Library For Event Driven Message Handling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = {version="2", fetures=["full"]}
quote = "1"
proc-macro2="1"