[package]
name = "event-driven-macro"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven Message Handling"
repository = "https://github.com/BeringLab/event-driven-library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = {version="2", features=["full"]}
quote = "1"
proc-macro2="1"
