[package]
name = "ruva-core"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven TEvent Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs ="1"
tokio = { version = "1.35.0", features = [ "macros","sync"] }
serde = {version="1.0.179",features=["derive"]}
serde_json = "1"
uuid = { version = "1.3.3", features = ["v4"]}
chrono = {version="0.4"}
async-trait = {version="0.1"}
futures="0.3"
macro_rules_attribute="0.2"
paste="1.0.14"
tracing="0.1.37"
hashbrown = "0.14"

sqlx = {version="0.6.3" ,features = ["runtime-tokio-rustls","postgres"],optional=true}

[features]
sqlx-postgres = ["sqlx"]
