[package]
name = "ruva-es"
version = "0.3.13"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven TEvent Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruva-core= {version="0.3.13", path="../ruva-core"}
dotenv="0.15.0"

[features]
sqlx-postgres = ["ruva-core/sqlx-postgres"]