[package]
name = "ruva-macro"
version = "0.19.1"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven TEvent Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = {version="2", features=["full","derive"]}
quote = "1"
proc-macro2="1"
regex = "1.10.6"


